<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name"  > BuddyChat  </string>
    <string name="start_chat"> Start Chat </string>
    <string name="end_chat"  > End Chat   </string>

    <string name="test_button1"> TEST YES NOD </string>
    <string name="test_button2"> EMERGENCY STOP MOTORS </string>
    <string name="test_button3"> RESET HEAD X/Y </string>
    <string name="test_button4"> ROTATE BUDDY </string>
    <string name="test_button5"> TEST Sleep/WakeUp </string>

    <string name="no_profile"  tools:ignore="TypographyEllipsis"> Not logged in yet...          </string>
    <string name="logging_in"  tools:ignore="TypographyEllipsis"> Signing in...                 </string>
    <string name="get_profile" tools:ignore="TypographyEllipsis"> Token OK, fetching profile... </string>

    <string name="buddy_messages"> [Buddy Message]  </string>
    <string name="user_messages" > [User Message]   </string>

</resources>