<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_face"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.buddychat.MainActivity">

    <!-- Profile Information Text -->
    <TextView
        android:id="@+id/textUserInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:text           = "@string/no_profile"
        android:textAppearance = "@style/TextProfileBar"
        android:background     = "@drawable/tv_user_info_bg"
        android:visibility="gone"

        android:textSize   = "16sp"
        android:padding    = "8dp"
        android:alpha      = "0.8"

        app:layout_constraintTop_toTopOf     = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintEnd_toEndOf     = "parent"
        app:layout_constraintHorizontal_bias = "0.5"
        />

    <!-- Start/Stop Button -->
    <Button android:id="@+id/buttonStartEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:text="@string/start_chat"
        android:textAppearance = "@style/TextProfileBar"
        android:background     = "@drawable/tv_user_info_bg"

        android:textSize         = "16sp"
        android:paddingHorizontal= "20dp"
        android:alpha            = "0.8"

        app:layout_constraintTop_toBottomOf  = "@id/textUserInfo"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintEnd_toEndOf     = "parent"
        app:layout_constraintHorizontal_bias = "0.5"
        />

    <!-- Testing Button #2: Emergency Stop Motors -->
    <Button android:id="@+id/buttonTester2"
        android:layout_width  = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginTop="10dp"

        android:text="@string/test_button2"
        android:textAppearance = "@style/TextProfileBar"
        android:background     = "@color/design_default_color_error"

        android:textSize          = "16sp"
        android:paddingHorizontal = "20dp"
        android:alpha             = "0.8"

        app:layout_constraintTop_toBottomOf  = "@id/buttonStartEnd"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintEnd_toEndOf     = "parent"
        app:layout_constraintHorizontal_bias = "0.5"
        />

    <!--
    ====================================================================
     Test Buttons Block #2
    ==================================================================== -->
    <!-- Testing Button #1: Test Yes Nod -->
    <Button android:id="@+id/buttonTester1"
        android:layout_width  = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginTop="10dp"

        android:text="@string/test_button1"
        android:textAppearance = "@style/TextProfileBar"
        android:background     = "@color/buddy_dark"

        android:textSize          = "16sp"
        android:paddingHorizontal = "15dp"
        android:alpha             = "0.8"

        app:layout_constraintTop_toBottomOf  = "@id/buttonTester2"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintEnd_toEndOf     = "@id/buttonTester3"
        app:layout_constraintHorizontal_bias = "0.15"
        />

    <!-- Testing Button #3: Reset Head X/Y -->
    <Button android:id="@+id/buttonTester3"
        android:layout_width  = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginTop="10dp"

        android:text="@string/test_button3"
        android:textAppearance = "@style/TextProfileBar"
        android:background     = "@color/buddy_dark"

        android:textSize          = "16sp"
        android:paddingHorizontal = "15dp"
        android:alpha             = "0.8"

        app:layout_constraintTop_toBottomOf  = "@id/buttonTester2"
        app:layout_constraintStart_toStartOf = "@id/buttonTester1"
        app:layout_constraintEnd_toEndOf     = "parent"
        app:layout_constraintHorizontal_bias = "0.85"
        />

    <!--
    ====================================================================
     Test Buttons Block #3
    ==================================================================== -->
    <!-- Testing Button #4 -->
    <Button android:id="@+id/buttonTester4"
        android:layout_width  = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginTop="10dp"

        android:text="@string/test_button4"
        android:textAppearance = "@style/TextProfileBar"
        android:background     = "@color/buddy_dark"

        android:textSize          = "16sp"
        android:paddingHorizontal = "15dp"
        android:alpha             = "0.8"

        app:layout_constraintTop_toBottomOf  = "@id/buttonTester1"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintEnd_toEndOf     = "@id/buttonTester5"
        app:layout_constraintHorizontal_bias = "0.15"
        />

    <!-- Testing Button #3 -->
    <Button android:id="@+id/buttonTester5"
        android:layout_width  = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginTop="10dp"

        android:text="@string/test_button5"
        android:textAppearance = "@style/TextProfileBar"
        android:background     = "@color/buddy_dark"

        android:textSize          = "16sp"
        android:paddingHorizontal = "15dp"
        android:alpha             = "0.8"

        app:layout_constraintTop_toBottomOf  = "@id/buttonTester1"
        app:layout_constraintStart_toStartOf = "@id/buttonTester4"
        app:layout_constraintEnd_toEndOf     = "parent"
        app:layout_constraintHorizontal_bias = "0.85"
        />


    <TextView android:id="@+id/testView1"
        android:layout_width  = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_marginStart  = "40dp"
        android:layout_marginEnd    = "40dp"
        android:layout_marginBottom = "12dp"

        android:text           = ""
        android:textAppearance = "@style/TextWhiteShadow"
        android:background     = "@color/design_default_color_error"

        android:textSize   = "18sp"
        android:padding    = "6dp"
        android:alpha      = "0.7"

        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintEnd_toEndOf     = "parent"
        app:layout_constraintBottom_toTopOf  = "@id/userView"
        />


    <!--
    ====================================================================
     Messages
    ==================================================================== -->
    <!-- User's recent message -->
    <TextView android:id="@+id/userView"
        android:layout_width  = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_marginStart  = "40dp"
        android:layout_marginEnd    = "40dp"
        android:layout_marginBottom = "12dp"

        android:text           = "@string/user_messages"
        android:textAppearance = "@style/TextWhiteShadow"
        android:background     = "@drawable/bubble_user"

        android:textSize   = "18sp"
        android:padding    = "6dp"
        android:alpha      = "0.7"

        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintEnd_toEndOf     = "parent"
        app:layout_constraintBottom_toTopOf  = "parent"
        />

    <!-- Robot's most recent message [hidden] -->
    <TextView android:id="@+id/botView"
        android:layout_width  = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_marginStart = "40dp"
        android:layout_marginEnd   = "40dp"
        android:layout_marginBottom = "12dp"

        android:text           = "@string/buddy_messages"
        android:textAppearance = "@style/TextWhiteShadow"
        android:background     = "@drawable/bubble_bot"
        android:visibility="gone"

        android:textSize   = "18sp"
        android:padding    = "6dp"
        android:alpha      = "0.7"

        app:layout_constraintStart_toStartOf   = "parent"
        app:layout_constraintEnd_toEndOf       = "parent"
        app:layout_constraintBottom_toBottomOf = "parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>